adicionar opcao para anexar documentos e funcao de duplicar casos em lote
